[package]
name = "xu-os"
version = "0.1.0"
authors = ["estraining <dylatos2022@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Disable unwinding
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.4.9"
x86_64 = "0.11.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
